force-app/main/default/objects/CNA_Certification__c/CNA_Certification__c.object-meta.xml
<CustomObject>
    <description>This object captures the history of CNA course completion for a provider</description>
    <label>CNA Certification</label>
    <nameField>
        <displayFormat>CNA-{0000}</displayFormat>
        <label>CNA Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CNA Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>