force-app/main/default/objects/CNA_Certification__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>CNA Certifications</relationshipLabel>
    <relationshipName>CNA_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>