force-app/main/default/objects/CNA_Certification__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <formula>TEXT(Enrollment__r.Status__c)</formula>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>