force-app/main/default/objects/CNA_Certification__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CNA Certifications</relationshipLabel>
    <relationshipName>CNA_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>