force-app/main/default/objects/CNA_Certification__c/fields/Total_Hours_Classroom_Theory__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Classroom_Theory__c</fullName>
    <label>Total Hours (Classroom/Theory)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>