force-app/main/default/objects/CNA_Certification__c/fields/Total_Hours_Clinical_Preceptor__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Clinical_Preceptor__c</fullName>
    <label>Total Hours (Clinical/Preceptor)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>